# shoc

./: .gitignore  Makefile.in  configure  configure.ac
config/: common.mk.in
doc/: Makefile.in
src/: Makefile.am  Makefile.in
src/common/: Makefile.in
src/cuda/: Makefile.in
src/cuda/level0/: Makefile.in
src/cuda/level0/epmpi/: Makefile.in
src/cuda/level1/: Makefile.in
src/cuda/level1/bfs/: Makefile.in
src/cuda/level1/bfs/epmpi/: Makefile.in
src/cuda/level1/fft/: Makefile.in
src/cuda/level1/fft/epmpi/: Makefile.in
src/cuda/level1/gemm/: Makefile.in
src/cuda/level1/gemm/epmpi/: Makefile.in
src/cuda/level1/md/: Makefile.in
src/cuda/level1/md/epmpi/: Makefile.in
src/cuda/level1/md5hash/: Makefile.in
src/cuda/level1/md5hash/epmpi/: Makefile.in
src/cuda/level1/neuralnet/: Makefile.in
src/cuda/level1/neuralnet/epmpi/: Makefile.in
src/cuda/level1/reduction/: Makefile.in
src/cuda/level1/reduction/epmpi/: Makefile.in
src/cuda/level1/reduction/tpmpi/: Makefile.in
src/cuda/level1/scan/: Makefile.in
src/cuda/level1/scan/epmpi/: Makefile.in
src/cuda/level1/sort/: Makefile.in
src/cuda/level1/spmv/: Makefile.in
src/cuda/level1/stencil2d/: Makefile.in
src/cuda/level1/triad/: Makefile.in
src/cuda/level2/: Makefile.in
src/cuda/level2/qtclustering/: Makefile.in
src/cuda/level2/s3d/: Makefile.in
src/mpi/: Makefile.in
src/mpi/common/: Makefile.in
src/mpi/contention/: Makefile.in
src/mpi/contention-mt/: Makefile.in
src/mpi/contention-mt/cuda/: Makefile.in
src/mpi/contention-mt/opencl/: Makefile.in
src/mpi/contention/cuda/: Makefile.in
src/mpi/contention/opencl/: Makefile.in
src/opencl/: Makefile.in
src/opencl/common/: Makefile.in
src/opencl/level0/: Makefile.in
src/opencl/level0/epmpi/: Makefile.am  Makefile.in
src/opencl/level1/: Makefile.in
src/opencl/level1/bfs/: Makefile.am  Makefile.in
src/opencl/level1/fft/: Makefile.am  Makefile.in
src/opencl/level1/gemm/: Makefile.am  Makefile.in
src/opencl/level1/md/: Makefile.am  Makefile.in
src/opencl/level1/md5hash/: Makefile.am  Makefile.in
src/opencl/level1/reduction/: Makefile.am  Makefile.in
src/opencl/level1/scan/: Makefile.am  Makefile.in
src/opencl/level1/sort/: Makefile.am  Makefile.in
src/opencl/level1/spmv/: Makefile.am  Makefile.in
src/opencl/level1/stencil2d/: Makefile.am  Makefile.in
src/opencl/level1/triad/: Makefile.am  Makefile.in
src/opencl/level2/: Makefile.in
src/opencl/level2/s3d/: Makefile.am  Makefile.in
src/opencrun/: Makefile.in
src/opencrun/common/: Makefile.in
src/opencrun/level0/: Makefile.am  Makefile.in  MaxFlops.cpp
src/opencrun/level0/epmpi/: Makefile.am  Makefile.in
src/opencrun/level1/: Makefile.in
src/opencrun/level1/bfs/: Makefile.am  Makefile.in
src/opencrun/level1/fft/: Makefile.am  Makefile.in  fft.cl
src/opencrun/level1/gemm/: Makefile.am  Makefile.in
src/opencrun/level1/gemm/epmpi/: Makefile.am  Makefile.in
src/opencrun/level1/md/: Makefile.am  Makefile.in
src/opencrun/level1/md5hash/: Makefile.am  Makefile.in  md5.cl
src/opencrun/level1/reduction/: Makefile.am  Makefile.in
src/opencrun/level1/reduction/epmpi/: Makefile.am  Makefile.in
src/opencrun/level1/scan/: Makefile.am  Makefile.in  scan.cl
src/opencrun/level1/scan/epmpi/: Makefile.am  Makefile.in
src/opencrun/level1/scan/tpmpi/: Makefile.am  Makefile.in
src/opencrun/level1/sort/: Makefile.am  Makefile.in  sort.cl
src/opencrun/level1/spmv/: Makefile.am  Makefile.in
src/opencrun/level1/spmv/epmpi/: Makefile.am  Makefile.in
src/opencrun/level1/stencil2d/: Makefile.am  Makefile.in  stencil2d.cl
src/opencrun/level1/triad/: Makefile.am  Makefile.in
src/opencrun/level2/: Makefile.in
src/opencrun/level2/s3d/: Makefile.am  Makefile.in  rdsmh.cl
src/stability/: Makefile.in
src/stability/epmpi/: Makefile.in
tools/: Makefile.in
(+53 files in other folders)
